# swagger.yaml
@@ -14,6 +14,30 @@ produces:
 basePath: "/api"
 
 paths:
+  /get_turnover:
+    post:
+      summary: Получение складского оборота
+      operationId: main.get_turnover
+      produces:
+        - application/text
+      responses:
+        200:
+          description: OK
+          schema:
+            type: object
+        500:
+          description: Ошибка на сервере
+        default:
+          description: Неизвестная ошибка
+      parameters:
+        - name: data
+          in: body
+          description: Данные для фильтрации
+          schema:
+            properties:
+              items:
+                $ref: '#/definitions/turnover_filters'
+
   /get_transactions:
     post:
       summary: Получение транзакции с учетом фильтрации
@@ -225,6 +249,19 @@ definitions:
         "nomenclature": {
           "comparison_format": 1,
           "value": "гр"
+        }
+      }
+    ]
+  turnover_filters:
+    type: array
+    example: [
+      {
+        "warehouse": "Ул. N, дом. 1",
+        "nomenclature": "гр",
+        "range": "гр",
+        "periods": {
+          "begin": "24-10-2024",
+          "end": "26-10-2024"
         }
       }
     ]
